tests/positive/BuiltinsMultiOpenImport/A.mjuvix
module A;

open import Nat;

end;
