tests/negative/ImportCycle/A.mjuvix
module A;

import B;
end;
